--- a/frontend/src/components/Tests/css/style.scss
+++ b/frontend/src/components/Tests/css/style.scss
@@ -126,6 +126,7 @@
             border: 2px solid var(--primary-color);
             display: flex;
             align-items: center !important;
+            color: var(--main-text-color) !important;
 
             .icon {
                 display: block;
